--- a/styles/components/feedback-block.css
+++ b/styles/components/feedback-block.css
@@ -1,5 +1,5 @@
-.feedback-block {
-}
+.feedback-block {}
+
 .feedback-block__container {
     padding: 40px;
     background-color: #CCDBAC;
@@ -7,6 +7,7 @@
     overflow: hidden;
     position: relative;
 }
+
 .feedback-block__container::after {
     content: '';
     display: inline-block;
@@ -27,6 +28,7 @@
 .wrapper.theme-yellow .feedback-block__container {
     background-color: #000;
 }
+
 .wrapper.theme-blue .feedback-block__container {
     background-color: #133C58;
 }
@@ -50,42 +52,50 @@
     z-index: 5;
     gap: 50px;
 }
+
 .feedback-block__description {
     padding-top: 61px;
 }
 
+.wrapper.text-medium .feedback-block__description,
+.wrapper.text-large .feedback-block__description {
+    padding-top: 14px;
+}
+
 .wrapper.theme-white .feedback-block__description * {
-    color: #FFF!important;
+    color: #FFF !important;
 }
 
 .wrapper.theme-yellow .feedback-block__description * {
-    color: #FFFF00!important;
+    color: #FFFF00 !important;
 }
 
 .wrapper.theme-blue .feedback-block__description * {
-    color: #9FD7FF!important;
+    color: #9FD7FF !important;
 }
 
 .wrapper.theme-blackWhite .feedback-block__description * {
-    color: #000!important;
+    color: #000 !important;
 }
 
 .wrapper.theme-blackGreen .feedback-block__description * {
-    color: #000!important;
+    color: #000 !important;
 }
 
 .feedback-block__main-text {
     font-size: 24px;
     line-height: 120%;
     color: #030303;
-    max-width: 414px;
+    max-width: 450px;
     margin-bottom: 60px;
 }
+
 .feedback-block__pre-text {
     font-size: 16px;
     line-height: 130%;
     color: #030303;
 }
+
 .feedback-block__form {
     max-width: 588px;
     width: 100%;
@@ -95,16 +105,21 @@
     .feedback-block__inner {
         gap: 40px;
     }
+
     .feedback-block__description {
         padding-top: 44px;
     }
+
     .feedback-block__main-text {
         font-size: 23px;
         margin-bottom: 55px;
     }
+
     .feedback-block__pre-text {
-        font-size: 15px;;
+        font-size: 15px;
+        ;
     }
+
     .feedback-block__form {
         max-width: 480px;
     }
@@ -114,16 +129,25 @@
     .feedback-block__inner {
         gap: 30px;
     }
+
     .feedback-block__description {
         padding-top: 25px;
     }
+
+    .wrapper.text-medium .feedback-block__description,
+    .wrapper.text-large .feedback-block__description {
+        padding-top: 10px;
+    }
+
     .feedback-block__main-text {
         font-size: 22px;
         margin-bottom: 50px;
     }
+
     .feedback-block__form {
         max-width: 330px;
     }
+
     .feedback-form {
         padding: 25px 30px 30px 30px;
     }
@@ -133,44 +157,56 @@
     .feedback-block__container {
         padding: 35px;
     }
+
     .feedback-block__inner {
         flex-direction: column;
         gap: 50px;
     }
+
     .feedback-block__description {
         padding-top: 0px;
         margin-right: 0px;
     }
+
+    .wrapper.text-medium .feedback-block__description,
+    .wrapper.text-large .feedback-block__description {
+        padding-top: 0px;
+    }
+
     .feedback-block__main-text {
         font-size: 22px;
         margin-bottom: 30px;
     }
+
     .feedback-block__form {
         max-width: none;
     }
+
     .feedback-form {
         padding: 25px 30px 30px 30px;
     }
 }
 
-@media (max-width: 651px) {
-    
-}
+@media (max-width: 651px) {}
 
 @media (max-width: 551px) {
     .feedback-block__container {
         padding: 30px;
     }
+
     .feedback-block__inner {
         gap: 30px;
     }
+
     .feedback-block__main-text {
         font-size: 20px;
         margin-bottom: 20px;
     }
+
     .feedback-block__pre-text {
         font-size: 14px;
     }
+
     .feedback-form {
         padding: 25px 25px 30px 25px;
     }
@@ -180,21 +216,26 @@
     .feedback-block__container {
         padding: 30px;
     }
+
     .feedback-block__inner {
         flex-direction: column;
         gap: 30px;
     }
+
     .feedback-block__description {
         padding-top: 0px;
         margin-right: 0px;
     }
+
     .feedback-block__main-text {
         font-size: 20px;
         margin-bottom: 20px;
     }
+
     .feedback-block__pre-text {
         font-size: 14px;
     }
+
     .feedback-form {
         padding: 20px 20px 30px 20px;
     }
