--- a/styles/components/sections/staff-section.css
+++ b/styles/components/sections/staff-section.css
@@ -1,53 +1,65 @@
 .staff {
     position: relative;
 }
-.main__staff {
-}
+
+.main__staff {}
+
 .staff__background-img {
     position: absolute;
     top: 297px;
     left: 0px;
     z-index: 3;
 }
+
 .staff__container {
     position: relative;
     z-index: 5;
 }
-.staff__title {
-}
+
+.staff__title {}
+
 .staff__slider {
     position: relative;
 }
-.staff__swiper {
-}
-.staff__swiper-wrapper {
-}
-.staff__swiper-slide {
-}
+
+.staff__swiper {}
+
+.staff__swiper-wrapper {}
+
+.staff__swiper-slide {}
+
 .staff__slide {
     max-width: 302px;
 }
+
 .staff__slide-img-wrap {
     margin-bottom: 24px;
     border-radius: 24px;
     overflow: hidden;
     height: 320px;
     width: 302px;
+    background-color: #F6F6F6;
+}
+
+.wrapper.no-images .staff__slide-img-wrap {
     background-color: #CFCFCF;
 }
+
 .staff__slide-img {
     width: 100%;
     height: 100%;
     object-fit: cover;
 }
-.staff__slide-body {
-}
+
+.staff__slide-body {}
+
 .staff__slide-title {
     font-size: 20px;
     line-height: 120%;
     color: #4E6932;
     margin-bottom: 16px;
 }
+
 .staff__slide-text {
     font-size: 16px;
     font-weight: 500;
@@ -55,10 +67,11 @@
     color: #303030;
     max-width: none;
 }
-.staff__swiper-button-prev {
-}
-.staff__swiper-button-next {
-}
+
+.staff__swiper-button-prev {}
+
+.staff__swiper-button-next {}
+
 .staff__swiper-pagination {
     display: none;
     font-size: 32px;
@@ -67,6 +80,7 @@
     position: static;
     width: auto;
 }
+
 .staff__swiper-controls {
     display: flex;
     justify-content: space-between;
@@ -80,6 +94,7 @@
         margin-bottom: 20px;
         aspect-ratio: 302 / 320;
     }
+
     .staff__slide-title {
         font-size: 18px;
         margin-bottom: 10px;
@@ -90,13 +105,16 @@
     .staff__slide {
         max-width: none;
     }
+
     .staff__slide-title {
         font-size: 16px;
         margin-bottom: 7px;
     }
+
     .staff__slide-text {
         font-size: 15px;
     }
+
     .staff__slide-img-wrap {
         height: auto;
         width: auto;
@@ -111,9 +129,7 @@
     }
 }
 
-@media (max-width: 651px) {
-    
-}
+@media (max-width: 651px) {}
 
 @media (max-width: 551px) {
     .staff__swiper-controls {
@@ -121,29 +137,41 @@
         bottom: 76px;
         width: auto;
     }
+
+    .wrapper.text-medium .staff__swiper-controls,
+    .wrapper.text-large .staff__swiper-controls {
+        bottom: 91px;
+    }
+
     .staff__swiper-navigation {
         display: none;
     }
+
     .staff__swiper-pagination {
         display: block;
     }
+
     .staff__slider {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+
     .staff__slide {
         position: relative;
         padding-top: calc(16px + 24px);
     }
+
     .staff__slide-body {
         display: flex;
         flex-direction: column;
         align-items: center;
     }
+
     .staff__slide-img-wrap {
         margin-bottom: 25px;
     }
+
     .staff__slide-title {
         font-size: 18px;
         margin-bottom: 0px;
@@ -151,6 +179,7 @@
         position: absolute;
         top: 0;
     }
+
     .staff__slide-text {
         color: #4E6932;
         text-align: center;
@@ -161,10 +190,18 @@
     .staff__slide-img-wrap {
         margin-bottom: 30px;
     }
+
     .staff__slide-title {
         font-size: 16px;
     }
+
     .staff__slide-text {
         font-size: 14px;
+    }
+}
+
+@media (max-width: 379px) {
+    .wrapper.text-large .staff__swiper-controls {
+        bottom: 118px;
     }
 }
