--- a/styles/pages/main.css
+++ b/styles/pages/main.css
@@ -754,6 +754,7 @@
     height: 600px;
     width: 560px;
     background-color: #CFCFCF;
+    aspect-ratio: 600 / 500;
 }
 
 .lifestyle-item__slide-img {
@@ -793,6 +794,7 @@
 
 .lifestyle-item__title {
     margin-bottom: 80px;
+    word-break: break-all;
 }
 
 .lifestyle-item__texts {
@@ -836,6 +838,21 @@
     display: none;
 }
 
+@media (min-width: 992px) {
+    .lifestyle-item__slider {
+        max-height: none;
+    }
+
+    .lifestyle-item__slide {
+        max-height: none;
+        height: 100%;
+    }
+
+    .lifestyle-item__slide-img-wrap {
+        height: 100%;
+    }
+}
+
 @media (max-width: 1341px) {}
 
 @media (max-width: 1281px) {
@@ -844,7 +861,6 @@
     }
 
     .lifestyle-item__slider {
-        max-height: 580px;
         max-width: 500px;
     }
 
@@ -1876,620 +1892,3 @@
 }
 
 @media (max-width: 431px) {}
-
-
-/* БЛОК НАШИ ПЕДАГОГИ (старые стили)
-.staff {
-    position: relative;
-}
-.main__staff {
-}
-.staff__background-img {
-    position: absolute;
-    top: 297px;
-    left: 0px;
-    z-index: 3;
-}
-.staff__container {
-    position: relative;
-    z-index: 5;
-}
-.staff__title {
-    max-width: 302px;
-}
-.staff__slider {
-    position: relative;
-}
-.staff__swiper {
-}
-.staff__swiper-wrapper {
-}
-.staff__swiper-slide {
-}
-.staff__slide {
-    max-width: 302px;
-}
-.staff__slide-img-wrap {
-    margin-bottom: 24px;
-    border-radius: 16px;
-    overflow: hidden;
-    background-color: #FCFCFC;
-    height: 320px;
-    width: 302px;
-}
-.staff__slide-img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-}
-.staff__slide-body {
-}
-.staff__slide-title {
-    font-size: 20px;
-    line-height: 120%;
-    color: #4E6932;
-    margin-bottom: 16px;
-}
-.staff__slide-text {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 120%;
-    color: #B3B3B3;
-    max-width: 144px;
-}
-.staff__swiper-button-prev {
-}
-.staff__swiper-button-next {
-}
-.staff__swiper-pagination {
-    display: none;
-    font-size: 32px;
-    line-height: 120%;
-    color: #CFCFCF;
-    position: static;
-    width: auto;
-}
-.staff__swiper-controls {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-@media (max-width: 1341px) {
-    .staff__slide-img-wrap {
-        height: auto;
-        width: auto;
-        margin-bottom: 20px;
-        aspect-ratio: 302 / 320;
-    }
-    .staff__slide-title {
-        font-size: 18px;
-        margin-bottom: 10px;
-    }
-}
-
-@media (max-width: 992px) {
-    .staff__slide {
-        max-width: none;
-    }
-    .staff__slide-title {
-        font-size: 16px;
-        margin-bottom: 7px;
-    }
-    .staff__slide-img-wrap {
-        height: auto;
-        width: auto;
-        margin-bottom: 18px;
-    }
-}
-
-@media (max-width: 769px) {
-    .staff__slide-title {
-        font-size: 18px;
-        margin-bottom: 13px;
-    }
-}
-
-@media (max-width: 651px) {
-    
-}
-
-@media (max-width: 551px) {
-    .staff__container {
-        padding: 0px;
-    }
-    .staff__title {
-        padding-left: 30px;
-    }
-    .staff__swiper-controls {
-        position: absolute;
-        bottom: 123px;
-        width: auto;
-    }
-    .staff__swiper-navigation {
-        display: none;
-    }
-    .staff__swiper-pagination {
-        display: block;
-    }
-    .staff__slider {
-        padding: 24px 30px 30px 30px;
-        background-color: #F8F8F8;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .staff__slide {
-        position: relative;
-        padding-top: calc(16px + 24px);
-    }
-    .staff__slide-body {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .staff__slide-img-wrap {
-        margin-bottom: 25px;
-    }
-    .staff__slide-title {
-        font-size: 18px;
-        margin-bottom: 0px;
-        align-self: flex-start;
-        position: absolute;
-        top: 0;
-    }
-    .staff__slide-text {
-        color: #4E6932;
-        text-align: center;
-    }
-}
-
-@media (max-width: 431px) {
-    .staff__slide-img-wrap {
-        margin-bottom: 30px;
-    }
-    .staff__slide-title {
-        font-size: 14px;
-    }
-} */
-
-
-/* БЛОК ОТЗЫВОВ (старые стили)
-.reviews {
-    position: relative;
-}
-.reviews__background-img {
-    position: absolute;
-    top: 0;
-    right: 117px;
-    z-index: 3;
-}
-.main__reviews {
-}
-.reviews__container {
-    position: relative;
-    z-index: 5;
-}
-.reviews__title {
-}
-.reviews__content {
-    padding: 40px 32px;
-    background-color: #FCFCFC;
-    border-radius: 24px;
-    display: flex;
-    flex-direction: column;
-    gap: 40px;
-    margin-bottom: 24px;
-}
-.reviews__content-title {
-    font-size: 24px;
-    line-height: 130%;
-    max-width: 361px;
-}
-.reviews__slider {
-    max-height: 363px;
-    position: relative;
-}
-.reviews__swiper {
-}
-.reviews__swiper-wrapper {
-}
-.reviews__swiper-slide {
-}
-.reviews__slide {
-    user-select: none;
-}
-.reviews__slide-img-wrap {
-    height: 320px;
-    width: 389px;
-    overflow: hidden;
-    border-radius: 16px;
-    margin-bottom: 24px;
-    position: relative;
-    cursor: pointer;
-}
-.reviews__slide-img-wrap:hover::after {
-    content: '';
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    background-color: rgba(255, 255, 255, 0.068);
-}
-.reviews__slide-img {
-    width: 102%;
-    object-fit: cover;
-    position: relative;
-    left: -2px;
-    top: -97px;
-}
-.reviws__slide-play-button-wrap {
-    position: absolute;
-    top: 24px;
-    right: 32px;
-    cursor: pointer;
-}
-.reviews__slide-img-wrap:hover path {
-    fill: #2f3f1d;
-}
-.reviews__slide-text {
-    font-size: 16px;
-    font-weight: 400;
-    line-height: 120%;
-    color: #4E6932;
-}
-.reviews__swiper-button-prev {
-}
-.reviews__swiper-button-next {
-}
-.reviews__feedback-block {
-}
-.rewiews__swiper-pagination {
-    display: none;
-    font-size: 32px;
-    line-height: 120%;
-    color: #CFCFCF;
-    position: static;
-    width: auto;
-}
-.rewiews__swiper-controls {
-    display: flex;
-    justify-content: space-between;
-    width: 100%;
-}
-
-@media (max-width: 1341px) {
-    .reviews__content {
-        padding: 35px 30px;
-        gap: 35px;
-        margin-bottom: 30px;
-    }
-    .reviews__content-title {
-        font-size: 22px;
-        max-width: 340px;
-    }
-    .reviews__slide-img-wrap {
-        height: auto;
-        width: auto;
-        margin-bottom: 20px;
-        aspect-ratio: 389 / 320;
-    }
-}
-
-@media (max-width: 992px) {
-    .reviews__content {
-        padding: 20px 25px;
-        gap: 30px;
-        margin-bottom: 50px;
-    }
-}
-
-@media (max-width: 769px) {
-    .reviews__container {
-        padding: 0px;
-    }
-    .reviews__content {
-        padding: 20px 25px;
-        gap: 30px;
-        margin-bottom: 60px;
-    }
-    .reviews__title {
-        padding-left: 30px;
-    }
-    .reviews__content-title {
-        font-size: 20px;
-        max-width: 310px;
-    }
-    .reviews__slide {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .reviews__slide > a {
-        order: 2;
-    }
-    .reviews__slide-img-wrap {
-        height: 320px;
-        width: 100%;
-        max-width: 430px;
-        margin-bottom: 0px;
-        margin-top: 20px;
-        order: 2;
-    }
-    .reviews__slide-text {
-        order: 1;
-    }
-}
-
-@media (max-width: 651px) {
-    
-}
-
-@media (max-width: 551px) {
-    .reviews__content {
-        padding: 0;
-        gap: 30px;
-        margin-bottom: 75px;
-    }
-    .reviews__content-title {
-        padding-left: 30px;
-    }
-    .rewiews__swiper-controls {
-        position: absolute;
-        margin-bottom: 0;
-        width: auto;
-        bottom: 10px;
-    }
-    .rewiews__swiper-pagination {
-        display: block;
-    }
-    .reviews__swiper-navigation {
-        display: none;
-    }
-    .reviews__slider {
-        max-height: none;
-        background-color: #F8F8F8;
-        padding: 30px;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-    .reviews__slide-img-wrap {
-        height: auto;
-    }
-    .reviews__slide-text {
-        font-size: 14px;
-    }
-    .rewiews__swiper-controls {
-        margin-bottom: 30px;
-    }
-}
-
-@media (max-width: 431px) {
-    .reviews__content {
-        margin-bottom: 90px;
-    }
-    .reviews__slide {
-        align-items: flex-start;
-    }
-    .reviews__content-title {
-        max-width: 210px;
-    }
-} */
-
-
-/* БЛОК КОНТАКТОВ (старый стиль)
-.contacts {
-}
-.main__contacts {
-}
-.contacts__container {
-}
-.contacts__inner {
-    padding: 32px 0px;
-    background-color: #FCFCFC;
-    border-radius: 24px;
-    display: flex;
-    justify-content: space-between;
-    position: relative;
-}
-.contacts__body {
-    padding-top: 28px;
-    margin-right: 39px;
-    max-width: 533px;
-    width: 100%;
-}
-.contacts__desc {
-    display: flex;
-    justify-content: space-between;
-    margin-bottom: 65.5px;
-}
-.contacts__smd {
-}
-.contacts__title {
-    margin-bottom: 24px;
-    font-size: 24px;
-    line-height: 130%;
-    font-weight: 500;
-    text-transform: uppercase;
-}
-.contacts__info {
-}
-.contacts__info * {
-    display: flex;
-    text-align: center;
-    align-items: center;
-    line-height: 130%;
-}
-.contacts__info * img {
-    margin-right: 8px;
-    max-height: 24px;
-    max-width: 24px;
-}
-.contacts__info > *:not(:last-child) {
-    margin-bottom: 17px;
-}
-.contacts__phone {
-}
-.contacts__phone-icon {
-}
-.contacts__email {
-}
-.contacts__email-icon {
-}
-.contacts__addresses {
-    display: flex;
-    flex-direction: column;
-    gap: 51px;
-}
-.contacts__address-block {
-}
-.contacts__address-title {
-    margin-bottom: 24px;
-    font-size: 24px;
-    line-height: 130%;
-}
-.contacts__address-items {
-}
-.contacts__address-item {
-    font-size: 16px;
-    line-height: 130%;
-}
-.contacts__address-item:not(:last-child) {
-    margin-bottom: 24px;
-}
-.contacts__button {
-    max-width: 511px;
-    width: 100%;
-    padding-top: 17px;
-    padding-bottom: 17px;
-}
-.contacts__map-wrap {
-    max-width: 628px;
-    width: 100%;
-    max-height: 512px;
-    border-radius: 24px;
-    overflow: hidden;
-}
-.contacts__map-wrap > * {
-    height: 100%;
-    width: 100%;
-}
-
-@media (max-width: 1281px) {
-    .contacts__address-item {
-        font-size: 14px;
-    }
-}
-
-@media (max-width: 992px) {
-    .contacts__inner {
-        padding: 20px 0px;
-        flex-direction: column;
-    }
-    .contacts__body {
-        padding-top: 0px;
-        margin-right: 0px;
-        max-width: none;
-        margin-bottom: 81px;
-    }
-    .contacts__desc {
-        margin-bottom: 0px;
-    }
-    .contacts__button {
-        position: absolute;
-        bottom: 0px;
-        max-width: none;
-    }
-    .contacts__map-wrap {
-        max-width: 410px;
-        height: 228px;
-        position: absolute;
-        bottom: 99px;
-    }
-}
-
-@media (max-width: 769px) {
-    .contacts__inner {
-        padding: 0px;
-        flex-direction: column;
-    }
-    .contacts__body {
-        margin-bottom: 50px;
-    }
-    .contacts__title {
-        font-size: 28px;
-    }
-    .contacts__desc {
-        gap: 47px;
-    }
-    .contacts__address-item {
-        font-size: 16px;
-    }
-    .contacts__addresses {
-        gap: 47px;
-    }
-    .contacts__info > *:not(:last-child) {
-        margin-bottom: 16px;
-    }
-    .contacts__address-title {
-        font-size: 22px;
-    }
-    .contacts__map-wrap {
-        position: static;
-        height: 350px;
-        margin-bottom: calc(45px + 52px);
-        max-width: none;
-    }
-    .contacts__address-item:not(:last-child) {
-        margin-bottom: 20px;
-    }
-    .contacts__button {
-        position: absolute;
-        bottom: 0px;
-        max-width: none;
-    }
-}
-
-@media (max-width: 651px) {
-
-}
-
-@media (max-width: 551px) {
-    .contacts__inner {
-        background-color: transparent;
-    }
-    .contacts__title {
-        font-size: 32px;
-    }
-    .contacts__body {
-        margin-bottom: 45px;
-    }
-    .contacts__desc {
-        flex-direction: column;
-        gap: 45px;
-    }
-    .contacts__address-item {
-        font-size: 14px;
-    }
-    .contacts__addresses {
-        gap: 45px;
-    }
-    .contacts__info > *:not(:last-child) {
-        margin-bottom: 14px;
-    }
-    .contacts__address-title {
-        font-size: 20px;
-    }
-    .contacts__address-item:not(:last-child) {
-        margin-bottom: 16px;
-    }
-    .contacts__map-wrap {
-        height: 257px;
-        margin-bottom: calc(45px + 52px);
-    }
-}
-
-@media (max-width: 431px) {
-} */
