--- a/styles/UI/checkbox.css
+++ b/styles/UI/checkbox.css
@@ -3,53 +3,68 @@
     align-items: center;
     cursor: pointer;
 }
+
 .my-checkbox__old {
     display: none;
 }
-.my-checkbox__old:checked + .my-checkbox__new {
+
+.my-checkbox__old:checked+.my-checkbox__new {
     background-color: #90AB7B;
 }
+
 .my-checkbox__new {
     display: inline-block;
     margin-left: 9px;
     margin-right: 16px;
     height: 16px;
-    width: 16px;
+    max-width: 16px;
+    width: 100%;
     border: 1px solid #90AB7B;
     border-radius: 4px;
 }
 
-.wrapper.theme-white .my-checkbox__old:checked + .my-checkbox__new {
+.wrapper.text-medium .my-checkbox__new, .wrapper.text-large .my-checkbox__new {
+    height: 24px;
+    max-width: 24px;
+    width: 100%;
+}
+
+.wrapper.theme-white .my-checkbox__old:checked+.my-checkbox__new {
     background-color: #000;
 }
+
 .wrapper.theme-white .my-checkbox__new {
     border: 1px solid #000;
 }
 
-.wrapper.theme-yellow .my-checkbox__old:checked + .my-checkbox__new {
+.wrapper.theme-yellow .my-checkbox__old:checked+.my-checkbox__new {
     background-color: #000;
 }
+
 .wrapper.theme-yellow .my-checkbox__new {
     border: 1px solid #000;
 }
 
-.wrapper.theme-blue .my-checkbox__old:checked + .my-checkbox__new {
+.wrapper.theme-blue .my-checkbox__old:checked+.my-checkbox__new {
     background-color: #133C58;
 }
+
 .wrapper.theme-blue .my-checkbox__new {
     border: 1px solid #133C58;
 }
 
-.wrapper.theme-blackWhite .my-checkbox__old:checked + .my-checkbox__new {
+.wrapper.theme-blackWhite .my-checkbox__old:checked+.my-checkbox__new {
     background-color: #FFF;
 }
+
 .wrapper.theme-blackWhite .my-checkbox__new {
     border: 1px solid #FFF;
 }
 
-.wrapper.theme-blackGreen .my-checkbox__old:checked + .my-checkbox__new {
+.wrapper.theme-blackGreen .my-checkbox__old:checked+.my-checkbox__new {
     background-color: #A9DD38;
 }
+
 .wrapper.theme-blackGreen .my-checkbox__new {
     border: 1px solid #A9DD38;
 }
@@ -59,36 +74,52 @@
     font-weight: 400;
     line-height: 120%;
 }
+
 .my-checkbox__text-link {
     text-decoration: underline;
 }
 
-@media (max-width: 1281px) {
+.wrapper.text-medium .my-checkbox__text {
+    font-size: 16px;
+}
 
+.wrapper.text-large .my-checkbox__text {
+    font-size: 20px;
+}
+
+@media (max-width: 1281px) {
+    .wrapper.text-medium .my-checkbox__text {
+        font-size: 14px;
+    }
+
+    .wrapper.text-large .my-checkbox__text {
+        font-size: 18px;
+    }
 }
 
 @media (max-width: 992px) {
-    .my-checkbox__new {
-        height: 16px;
-        width: 21px;
-    }
+
 }
 
 @media (max-width: 769px) {
-    .my-checkbox__new {
-        height: 16px;
-        width: 16px;
+    .wrapper.text-medium .my-checkbox__text {
+        font-size: 16px;
+    }
+
+    .wrapper.text-large .my-checkbox__text {
+        font-size: 20px;
     }
 }
 
-@media (max-width: 651px) {
-    
-}
+@media (max-width: 651px) {}
 
 @media (max-width: 551px) {
-    .my-checkbox__text {
-        max-width: 150px;
-        font-size: 12px;
+    .wrapper.text-medium .my-checkbox__text {
+        font-size: 14px;
+    }
+
+    .wrapper.text-large .my-checkbox__text {
+        font-size: 18px;
     }
 }
 
@@ -97,4 +128,3 @@
         padding: 20px 20px 30px 20px;
     }
 }
-
