--- a/styles/UI/input.css
+++ b/styles/UI/input.css
@@ -9,6 +9,14 @@
     color: #CFCFCF;
 }
 
+.wrapper.text-medium .my-input {
+    font-size: 18px;
+}
+
+.wrapper.text-large .my-input {
+    font-size: 22px;
+}
+
 .wrapper.theme-white .my-input {
     background-color: transparent;
     border: 1px solid #000;
@@ -47,4 +55,42 @@
 }
 .wrapper.theme-blackGreen .my-input::placeholder {
     color: #A9DD38;
+}
+
+@media (max-width: 1281px) {
+    .wrapper.text-medium .my-input {
+    font-size: 16px;
+}
+
+.wrapper.text-large .my-input {
+    font-size: 20px;
+}
+}
+
+@media (max-width: 992px) {
+}
+
+@media (max-width: 769px) {
+    .wrapper.text-medium .my-input {
+    font-size: 18px;
+}
+
+.wrapper.text-large .my-input {
+    font-size: 22px;
+}
+}
+
+@media (max-width: 651px) {
+}
+
+@media (max-width: 551px) {
+}    .wrapper.text-medium .my-input {
+    font-size: 16px;
+}
+
+.wrapper.text-large .my-input {
+    font-size: 20px;
+}
+
+@media (max-width: 431px) {
 }
