--- a/styles/components/additional-feature-panel.css
+++ b/styles/components/additional-feature-panel.css
@@ -1,8 +1,10 @@
 .additional-feature-panel {
     background-color: #FFF;
-    position: relative;
+    position: fixed;
     border-bottom: 3px solid #000;
     display: flex;
+    width: 100%;
+    z-index: 2000;
 }
 
 .additional-feature-panel.--displayNone {
@@ -147,12 +149,12 @@
     color: #000;
 }
 
-.additional-feature-panel__button-off {
+.wrapper[class*="text"] .my-button.additional-feature-panel__button-off, .my-button.additional-feature-panel__button-off {
     width: 260px;
     padding: 16px 24px;
     color: #000 !important;
     border: 1px solid #000 !important;
-    font-size: 16px;
+    font-size: 16px!important;
     white-space: nowrap;
 }
 
