--- a/styles/components/double-slider.css
+++ b/styles/components/double-slider.css
@@ -1,13 +1,13 @@
 .double-slider {
     display: flex;
     gap: 60px;
+    height: 100%;
 }
 
 .double-slider__text-slider {
     max-width: 610px;
-    max-height: 600px;
+    max-height: none;
     width: 610px;
-    height: 600px;
     border-radius: 24px;
     position: relative;
     border-radius: 24px;
@@ -72,9 +72,8 @@
     display: flex;
     flex-direction: column;
     gap: 24px;
-    position: absolute;
-    bottom: 40px;
-    left: 40px;
+    margin-left: 40px;
+    margin-bottom: 40px;
 }
 
 .double-slider__text-swiper-pagination {
@@ -102,7 +101,7 @@
 
 .double-slider__image-slider {
     max-width: 610px;
-    max-height: 600px;
+    max-height: none;
     border-radius: 24px;
     overflow: hidden;
     position: relative;
@@ -139,31 +138,79 @@
     bottom: 11px !important;
 }
 
-@media (max-width: 1361px) {
-    .double-slider {
-        gap: 40px;
+@media (min-width: 992px) {
+    .double-slider__text-slider {
+        display: flex;
+        flex-direction: column;
+        width: 100%;
+        height: auto;
+        border-radius: 24px;
+        position: relative;
+        width: calc(50% - 20px);
+        min-height: auto;
     }
 
-    .double-slider__text-slider,
+    .double-slider__text-swiper {
+        flex: 1 1 auto;
+        display: flex;
+        flex-direction: column;
+    }
+
     .double-slider__img-sliders {
+        max-height: none;
         width: 100%;
-        height: 100%;
-        aspect-ratio: 610 / 600;
+        height: auto;
         border-radius: 24px;
         position: relative;
         width: calc(50% - 20px);
     }
 
     .double-slider__image-slider {
-        width: 100%;
-        height: auto;
+        max-height: none;
+        min-height: auto;
+    }
+
+    .double-slider__image-slide {
+        max-height: none;
+        height: 100%;
     }
 
     .double-slider__image-slide-wrap {
+        height: 100%;
+    }
+}
+
+@media (min-width: 1362px) {
+    .double-slider__text-slider {
+        min-height: 600px;
+    }
+}
+
+@media (max-width: 1361px) {
+    .double-slider {
+        gap: 40px;
+    }
+
+    .double-slider__text-slider {
+        min-height: 500px;
+    }
+
+
+    .double-slider__image-slider {
+        width: 100%;
+        height: 100%;
+        min-height: 560px;
+    }
+
+    .double-slider__image-slide-wrap {
+        width: 100%;
+        height: 100%;
+    }
+
+    /* .double-slider__text-slider {
         width: auto;
         height: auto;
-        aspect-ratio: 610 / 600;
-    }
+    } */
 }
 
 @media (max-width: 1281px) {
@@ -183,8 +230,8 @@
 
     .double-slider__text-swiper-controls {
         gap: 20px;
-        bottom: 30px;
-        left: 30px;
+        margin-bottom: 30px;
+        margin-left: 30px;
     }
 }
 
@@ -226,8 +273,9 @@
         width: 100%;
         height: auto;
         max-width: none;
-        aspect-ratio: 0;
         width: 100%;
+        aspect-ratio: auto;
+        min-height: auto;
     }
 
     .double-slider__text-swiper {
@@ -250,6 +298,7 @@
     }
 
     .double-slider__text-swiper-controls {
+        position: absolute;
         bottom: auto;
         top: 30px;
         right: 30px;
@@ -264,6 +313,7 @@
         width: 100%;
         height: auto;
         max-width: none;
+        min-height: auto;
     }
 
     .double-slider__image-slide {
