--- a/styles/components/form.css
+++ b/styles/components/form.css
@@ -28,25 +28,27 @@
     display: flex;
     flex-direction: column;
 }
-.feedback-form__input {
-}
+
+.feedback-form__input {}
+
 .feedback-form__input:not(:last-child) {
     margin-bottom: 16px;
 }
+
 .feedback-form__input[name="input-phone"] {
     margin-bottom: 24px;
 }
+
 .feedback-form__checkbox {
     margin-bottom: 45px;
 }
+
 .feedback-form__button {
     padding-top: 12px;
     padding-bottom: 12px;
 }
 
-@media (max-width: 1281px) {
-
-}
+@media (max-width: 1281px) {}
 
 @media (max-width: 992px) {
     .feedback-form {
@@ -60,9 +62,7 @@
     }
 }
 
-@media (max-width: 651px) {
-    
-}
+@media (max-width: 651px) {}
 
 @media (max-width: 551px) {
     .feedback-form {
