--- a/styles/components/modal.css
+++ b/styles/components/modal.css
@@ -183,8 +183,7 @@
 @media (max-width: 651px) {
     .my-modal__container {
         padding: 30px;
-        max-width: 300px;
-        width: 100%;
+        width: calc(100% - 60px);
     }
 
     .my-modal__close {
