--- a/styles/pages/about.css
+++ b/styles/pages/about.css
@@ -11,10 +11,12 @@
 .about-info__video-wrap {
     max-width: 610px;
     width: 100%;
-    height: 600px;
+    min-height: 600px;
+    height: auto;
     overflow: hidden;
     border-radius: 24px;
     background-color: #CFCFCF;
+    display: flex;
 }
 
 .about-info__video-poster {
@@ -39,6 +41,10 @@
     gap: 16px;
 }
 
+.about-info__texts:not(:last-child) {
+    margin-bottom: 40px;
+}
+
 .about-info__text {
     font-size: 16px;
     line-height: 130%;
@@ -59,7 +65,6 @@
     }
 
     .about-info__video-wrap {
-        max-height: 560px;
         max-width: none;
         width: 100%;
     }
@@ -91,13 +96,16 @@
     .about-info__video-wrap {
         max-height: 481px;
         order: 2;
+        min-height: 0px;
+        display: flex;
+        align-items: center;
     }
 
     .about-info__body {
         max-width: none;
     }
 
-    .about-info__texts {
+    .about-info__texts:not(:last-child) {
         gap: 16px;
         margin-bottom: 35px;
     }
@@ -124,10 +132,6 @@
         max-width: none;
     }
 
-    .about-info__texts {
-        gap: 16px;
-    }
-
     .about-info__text {
         font-size: 15px;
     }
@@ -146,7 +150,7 @@
         margin-bottom: 48px;
     }
 
-    .about-info__texts {
+    .about-info__texts:not(:last-child) {
         margin-bottom: 30px;
     }
 }
@@ -182,7 +186,7 @@
         max-height: 223px;
     }
 
-    .about-info__texts {
+    .about-info__texts:not(:last-child) {
         margin-bottom: 24px;
     }
 }
@@ -326,6 +330,7 @@
 @media (max-width: 902px) {
     .avantage-descripion__title {
         margin-right: 0px;
+        max-width: none;
     }
 
     .avantage-descripion {
